--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
  position: relative;
  height:max-content;
  width:100%;
+ display: flex;
+ gap:50px;
+ justify-content: center;
  /* overflow-y:scroll ; */
 }
 
@@ -26,9 +29,10 @@
   flex-direction: column;
   align-items: center;
   gap:15px;
-  position: fixed;
-  top:100px;
-  left:100px
+  position: sticky;
+  top:50px;
+  left:100px;
+  height:fit-content
 }
 .profile-pic{
  width: 100%;
@@ -80,11 +84,12 @@ hr{
   background: linear-gradient(#21829C,#234D6F);
   width: 65%;
   position: relative;
-  left:320px;
+  left:10px;
   /* top:100px; */
   border-radius: 15px;
   border: 1px solid black;
   overflow: hidden;
+  color:#fafafa
 }
 .heading{
   padding:15px;
@@ -263,5 +268,91 @@ p{
 .progressbar{
   margin-top:10px;
 }
-  
 
+.certificates-page{
+  padding:20px;
+}
+
+.certificate-img-wrapper{
+   height:200px;
+   width: 200px;
+   border: 8px solid black;
+   object-fit: cover;
+}
+.certificate-img-wrapper img{
+     height: 100%;
+     width: 100%;
+}
+.each-certificate{
+  padding: 10px 20px;
+  border-left: 1px solid black;
+  position: relative;
+}
+.milestone{
+  position: absolute;
+  top:0px;
+  left:-5px;
+  height:13px;
+  width:13px;
+  border-radius: 50%;
+  background-color: #162a4b;
+  padding:2px;
+}
+.submilstone{
+  width: 100%;
+  height:100%;
+  background-color: #9d7f12;
+  border-radius: 50%;
+}
+
+.All-projects{
+  display: flex;
+  flex-wrap: wrap;
+  gap:20px;
+  padding: 20px;
+  justify-content: space-around;
+}
+.project{
+  width: 30%;
+  text-align: center;
+  
+}
+.project-img{
+  width: 100%;
+  height:150px;
+  object-fit: cover;
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: 10px;
+
+}
+.project-img img{
+  width: 100%;
+  height: 100%;
+}
+.project h3{
+  font-size: 16px;
+  font-weight: 500;
+}
+.project p{
+  color:#b9b8b8;
+}
+.project button{
+  background-color: transparent;
+  color:#f4bb6b;
+  border: none;
+  outline: none;
+  width: 100%;
+  padding:5px;
+  background-color: #226177;
+  border-radius: 10px;
+
+}
+.project-page{
+  padding:20px;
+}
+.project-page ul{
+  display: flex;
+  list-style: none;
+  gap:20px;
+}
